--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    <div class="container">
       <!-- header section start-->
       <nav>
-         <span>Md.Bokul Islam</span>
+         <h5>Md.Bokul Islam</h5>
          <input type="checkbox" name="check" id="check">
          <label for="check" class="checkbtn">
              <i class="fa-solid fa-bars"></i>
